--- a/index.html
+++ b/index.html
@@ -7,12 +7,44 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Prayer Time</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="https://cdn.iconscout.com/icon/premium/png-256-thumb/shalat-2254855-1881717.png"
+        type="image/x-icon">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 
 <body>
-    <div id="app">
-
+    <div class="text-white">
+        <img src="https://images.unsplash.com/photo-1542816417-0983c9c9ad53?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80"
+            class="w-100" alt="Quran-image">
+        <div class="card-img-overlay">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
+                content.
+                This content is a little bit longer.</p>
+            <p class="card-text">Last updated 3 mins ago</p>
+        </div>
     </div>
+    <div class="container">
+        <h4 class="my-4">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolor esse quibusdam laboriosam cum
+            officia maxime,
+            molestias magnam dolorum voluptatum soluta, quas amet laborum possimus accusamus porro? Optio, nihil? Eos,
+            dicta.</h4>
+        <div class="row">
+            <div class="col">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate labore quos, neque error
+                    voluptates
+                    officia facere accusamus fuga consectetur minus unde autem exercitationem, dolore ipsa. Ullam
+                    delectus
+                    facere aperiam obcaecati!</p>
+            </div>
+            <div id="app" class="col">
+
+            </div>
+        </div>
+    </div>
+
+
 </body>
 <script src="app.js"></script>
 
