--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
         <img src="https://images.unsplash.com/photo-1542816417-0983c9c9ad53?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80"
             class="w-100" alt="Quran-image">
         <div class="card-img-overlay">
+            <div class="header">
+                <h5>Logo</h5>
+            </div>
+            <hr>
             <h5 class="card-title">Card title</h5>
             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
                 content.
@@ -26,6 +30,7 @@
         </div>
     </div>
     <div class="container">
+
         <h4 class="my-4">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolor esse quibusdam laboriosam cum
             officia maxime,
             molestias magnam dolorum voluptatum soluta, quas amet laborum possimus accusamus porro? Optio, nihil? Eos,
