completed layout but not the content

--- a/index.html
+++ b/index.html
@@ -16,41 +16,266 @@
 <body>
     <div class="text-white">
         <img src="https://images.unsplash.com/photo-1542816417-0983c9c9ad53?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80"
-            class="w-100" alt="Quran-image">
+            class="w-100 quran" alt="Quran-image">
         <div class="card-img-overlay">
-            <div class="header">
-                <h5>Logo</h5>
+            <!--Heading on image-->
+            <header
+                class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4">
+                <a href="/" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-white text-decoration-none">
+                    LOGO
+                </a>
+
+                <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
+                    <li><a href="#" class="nav-link px-2 text-white">Home</a></li>
+                    <li><a href="#about-us" class="nav-link px-2 text-white">About Us</a></li>
+                    <li><a href="#prayer-time" class="nav-link px-2 text-white">Praying Time</a></li>
+                    <li><a href="#" class="nav-link px-2 text-white">News</a></li>
+                    <li><a href="#" class="nav-link px-2 text-white">Events</a></li>
+                </ul>
+
+                <div class="col-md-3 text-end">
+                    <button type="button" class="btn btn-primary">Donate</button>
+                </div>
+            </header>
+
+            <!--Quran Ayat-->
+            <div class="container">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text w-50">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi libero,
+                    provident, minima ipsam, dolorem nesciunt aspernatur quas molestias consequatur adipisci officia.
+                    Reprehenderit dolore, voluptatibus porro quod ipsam alias cum nihil!</p>
+                <p class="card-text">Last updated 3 mins ago</p>
+                <button type="button" class="btn btn-primary">Donate</button>
             </div>
-            <hr>
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
-                content.
-                This content is a little bit longer.</p>
-            <p class="card-text">Last updated 3 mins ago</p>
         </div>
     </div>
     <div class="container">
-
-        <h4 class="my-4">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolor esse quibusdam laboriosam cum
-            officia maxime,
-            molestias magnam dolorum voluptatum soluta, quas amet laborum possimus accusamus porro? Optio, nihil? Eos,
-            dicta.</h4>
-        <div class="row">
+        <div class="about-us row my-4" id="about-us">
             <div class="col">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate labore quos, neque error
-                    voluptates
-                    officia facere accusamus fuga consectetur minus unde autem exercitationem, dolore ipsa. Ullam
-                    delectus
-                    facere aperiam obcaecati!</p>
+                <img src="https://images.unsplash.com/photo-1634037440110-e1f62286f57a?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=465&q=80"
+                    alt="about us" class="h-60">
             </div>
-            <div id="app" class="col">
+            <div class="col">
+                <h4>About Us</h4>
+                <p class="fs-4">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit, distinctio.
+                    Suscipit, at.
+                    Minus deserunt veritatis sint facilis dicta, rerum ullam minima asperiores eveniet officiis eaque
+                    corporis molestias vel, repudiandae dignissimos!</p>
+            </div>
+        </div>
+        <div class="prayer-section" id="prayer-time">
+            <h3 class="my-4">Prayer Times</h3>
+            <div class="row">
+                <div class="col fs-4">
+                    <p>Establish Prayer from the declining of the sun to the darkness of the night; and hold fast to the
+                        recitation of the Qur'an at dawn, for the recitation of the Qur'an at dawn is witnessed. [17:78]
+                    </p>
+                </div>
+                <div id="app" class="col">
 
+                </div>
+            </div>
+        </div>
+        <div class="recent-article">
+            <div class="row my-4 article-top">
+                <h3 class="col">Recent Article</h3>
+                <p class="col text-end">Read More</p>
+            </div>
+            <div class="row row-cols-1 row-cols-md-4 g-4 article">
+                <div class="col">
+                    <div class="card h-100">
+                        <img src="..." class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in
+                                to
+                                additional content. This content is a little bit longer.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100">
+                        <img src="https://images.unsplash.com/photo-1621697919947-663d48b244be?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=454&q=80"
+                            class="card-img-top h-50" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis
+                                nobis
+                                minus accusamus vero deserunt alias dolores commodi ullam ex. Vitae veniam dolores
+                                repellendus nisi quas, et quaerat explicabo aspernatur esse!</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100">
+                        <img src="..." class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in
+                                to
+                                additional content.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100">
+                        <img src="..." class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in
+                                to
+                                additional content. This content is a little bit longer.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="event my-4">
+            <div class="row my-4 border-bottom">
+                <h3 class="col">Event</h3>
+                <p class="col text-end">Read More</p>
+            </div>
+            <!--Slide next and previous-->
+            <div id="carouselArticle" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <div class="card h-100">
+                            <div class="row g-0">
+                                <div class="col-md-4">
+                                    <img src="https://images.unsplash.com/photo-1575751639353-e292e76daca3?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80"
+                                        class="
+                            img-fluid rounded-start" alt="...">
+                                </div>
+                                <div class="col-md-8">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Card title</h5>
+                                        <p class="card-text">This is a wider card with supporting text below as a
+                                            natural lead-in to
+                                            additional content. This content is a little bit longer.</p>
+                                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small>
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="card h-100">
+                            <div class="row g-0">
+                                <div class="col-md-4">
+                                    <img src="https://images.unsplash.com/photo-1598723106396-f89827f6aa1a?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=873&q=80"
+                                        class="
+                            img-fluid rounded-start" alt="...">
+                                </div>
+                                <div class="col-md-8">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Card title</h5>
+                                        <p class="card-text">This is a wider card with supporting text below as a
+                                            natural lead-in to
+                                            additional content. This content is a little bit longer.</p>
+                                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small>
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="card h-100">
+                            <div class="row g-0">
+                                <div class="col-md-4">
+                                    <img src="https://images.unsplash.com/photo-1563300365-9c77e472e7a5?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80"
+                                        class="
+                            img-fluid rounded-start" alt="...">
+                                </div>
+                                <div class="col-md-8">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Card title</h5>
+                                        <p class="card-text">This is a wider card with supporting text below as a
+                                            natural lead-in to
+                                            additional content. This content is a little bit longer.</p>
+                                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small>
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselArticle"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselArticle"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
             </div>
         </div>
     </div>
+    <footer class="py-5 ">
+        <div class="container">
+            <div class="d-flex bd-highlight mb-3">
+                <div class="p-2 bd-highlight">
+                    <h5>Section</h5>
+                    <ul class="nav flex-column">
+                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Home</a></li>
+                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Features</a></li>
+                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Pricing</a></li>
+                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">FAQs</a></li>
+                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">About</a></li>
+                    </ul>
+                </div>
+                <div class="p-2 bd-highlight ">
+                    <h5>Section</h5>
+                    <ul class="nav flex-column">
+                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Home</a></li>
+                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Features</a></li>
+                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Pricing</a></li>
+                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">FAQs</a></li>
+                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">About</a></li>
+                    </ul>
+                </div>
+                <div class="ms-auto p-2 bd-highlight">
+                    <form>
+                        <h5>Keep in Touch With Us</h5>
+                        <p>Get our news letter to your email</p>
+                        <div class="d-flex w-100 gap-2">
+                            <label for="newsletter1" class="visually-hidden">Email address</label>
+                            <div class="input-group">
+                                <input type="text" class="form-control" placeholder="Recipient's username"
+                                    aria-label="Recipient's username">
+                                <button class="btn btn-info" type="button">Button</button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+
+            <div class="d-flex justify-content-between border-top">
+                <p>© 2021 Company, Inc. All rights reserved.</p>
+                <ul class="list-unstyled d-flex">
+                    <li class="ms-3"><a class="link-dark" href="#"><svg class="bi" width="24" height="24">
+                                <use xlink:href="#twitter"></use>
+                            </svg></a></li>
+                    <li class="ms-3"><a class="link-dark" href="#"><svg class="bi" width="24" height="24">
+                                <use xlink:href="#instagram"></use>
+                            </svg></a></li>
+                    <li class="ms-3"><a class="link-dark" href="#"><svg class="bi" width="24" height="24">
+                                <use xlink:href="#facebook"></use>
+                            </svg></a></li>
+                </ul>
+            </div>
+        </div>
+    </footer>
 
 
 </body>
 <script src="app.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+</script>
 
 </html>
